--- a/index.html
+++ b/index.html
@@ -10,26 +10,38 @@
 </head>
 
 <body>
-	<main>
-		<header>
+	<header class ="navigation">
+		<section>
+			<a class ="navigation__link" href="pn.html">Poniedziałek</a>
+			<a class ="navigation__link"href="wt.html">Wtorek</a>
+			<a class ="navigation__link"href="sr.html">Środa</a>
+		</section>	
+	</header>
+	<main class="main">
+		<header class="main__header">
 			<h1>Pamiętnik dotyczączy kursu frontend</h1>
 		</header>
-		<section>
-			<h2>Dni tygodnia:?</h2>
-			<a href="pn.html">Poniedziałek</a>
-			<a href="wt.html">Wtorek</a>
-			<a href="sr.html">Środa</a>
-		</section>		
-		<section>
-			<h2 class="headerImportant">Czemu?</h2>
-			Żeby ogarnąć ten frontend :)
+		<section class="about">
+		<h2>O mnie</h2>
+		... do zrobienia :) ....
+		</section>
+		<section class="why">
+			<h2 class="why__header">Czemu?</h2>
+			<p class="why__paragraph">
+			Żeby ogarnąć ten frontend :) Nie chcę taki zielony z tego frontendu i nie potrafić zmienić najprostrzej rzeczy. Lubię się uczyć i pogrzebać w czymś innym niż na co dzień. Chcę dojść do momentu, że prostą, ale schludną stronę jestem w stanie zrobić.
+			</p>
 		</section>
 
-		<section>
+		<section class="paragraph">
 			<h2>Co się nauczyłem</h2>
 			<h3>VS Code</h3>
 			<p>Używałem już przy Ruby. ! + TAB w nowym pliku *.html -> uwielbiam :)</p>
 			<p>View -> Toggle Word Wrap</p>
+		</section>
+		<section>
+			<div class="paragraph--js">
+			
+			</div>
 		</section>
 		<footer>
 			Treści tworzone na potrzeby kursu WTF
